# spmv-acc

./: .clang-format  .gitattributes  .gitignore  BENCHMARK-V100.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  LICENSE  README-DEMO.md  README.md  build-for-benchmark-v100.sh  config.cmake  pkg.yaml
.chglog/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
benchmark/: CMakeLists.txt  benchmark_acsr.hpp  benchmark_config.h  benchmark_cub.hpp  benchmark_cusparse.hpp  benchmark_hola_cuda.hpp  benchmark_hola_hip.hpp  benchmark_merge_path.hpp  benchmark_rocsparse.hpp  benchmark_spmv_acc.hpp  csr_spmv.hpp  cub_impl.inl  cusparse_impl.inl  hola_hip_impl.inl  hola_impl.inl  main.cpp  rocsparse_impl.inl  sparse.cmake  spmv_acc_flat.hpp  spmv_acc_impl.inl
benchmark/acsr/: ACSR.cpp  ACSR.h  acsr_source_list.cmake
benchmark/csr-adaptive-plus/: csr_adaptive_plus_benchmark.cpp  csr_adaptive_plus_benchmark.h  csr_adaptive_plus_source_list.cmake
benchmark/cub/: CMakeLists.txt  cub_source_list.cmake  spmv.cpp  spmv.cu  spmv.h
benchmark/flat/: flat_source_list.cmake  spmv_acc_flat.cpp  spmv_acc_flat.h  spmv_acc_flat.hpp
benchmark/hola/: CMakeLists.txt  hola_source_list.cmake  spmv.cpp  spmv.h
benchmark/hola-hip/: CMakeLists.txt  hola-hip_source_list.cmake  spmv.cpp  spmv.h
benchmark/merge-path/: merge_path_config.h  merge_path_partition.h  merge_path_reduction.h  merge_path_source_list.cmake  merge_path_spmv.cu  merge_path_spmv.h  merge_path_update.h  merge_path_utils.h
benchmark/utils/: CMakeLists.txt  benchmark_time.cpp  benchmark_time.h  statistics_logger.cpp  statistics_logger.h  timer_utils.h
cli/: CMakeLists.txt  csr.hpp  csr_binary_reader.hpp  csr_mtx_reader.hpp  main.cpp  matrix_market_reader.hpp  mtx_reader.hpp  sort_omp.hpp  sparse_format.h  timer.h  utils.hpp  verification.cpp  verification.h
examples/: batch.sh  large-data-set-Hardesty3-batch.sh  large-data-set-batch.sh
examples/data/: af23560.csr  bayer10.csr  bcsstk18.csr  coater2.csr  dw4096.csr  epb1.csr  exdata_1.csr  nemeth03.csr  poli_large.csr  rajat03.csr
scripts/: hipcc-nv-wrapper.sh  spmv-bench-v100.sh
src/: .gitignore  CMakeLists.txt  Csrsparse.hpp  building_config.h.in  common_function.hpp  configure.cmake  main.cpp
src/acc/: CMakeLists.txt  acc_libs.cmake  strategy_picker.cpp
src/acc/api/: handle.h  spmv.h  spmv_imp.cpp  types.h
src/acc/common/: global_mem_ops.hpp  utils.h
src/acc/hip/: spmv_hip_acc_imp.cpp  spmv_hip_acc_imp.h
src/acc/hip-adaptive/: adaptive.cpp  adaptive.h
src/acc/hip-block-row-ordinary/: spmv_hip_acc_imp.cpp  spmv_hip_acc_imp.h
src/acc/hip-csr-adaptive-plus/: csr_adaptive_plus_analyze.cpp  csr_adaptive_plus_analyze.h  csr_adaptive_plus_config.h  csr_adaptive_plus_spmv.cpp  csr_adaptive_plus_spmv.h  csr_adaptive_plus_spmv_imp.h  csr_adaptive_plus_spmv_imp.inl  source_list.cmake
src/acc/hip-flat/: flat.cpp  flat_config.h  flat_imp.inl  flat_imp_one_pass.hpp  flat_reduce.hpp  source_list.cmake  spmv_hip_acc_imp.cpp  spmv_hip_acc_imp.h
src/acc/hip-group-row/: spmv_hip_acc_imp.cpp
src/acc/hip-light/: light_spmv.cpp  spmv_hip_acc_imp.cpp  spmv_hip_acc_imp.h  utils.h
src/acc/hip-line/: line_adaptive_one_pass.inl  line_config.h  line_imp_one_pass.inl  line_kernel_imp.inl  line_strategy.cpp  line_strategy.h  source_list.cmake  spmv_hip_acc_imp.cpp  spmv_hip_acc_imp.h
src/acc/hip-line-enhance/: line_enhance_reduce.hpp  line_enhance_spmv.cpp  line_enhance_spmv.h  line_enhance_spmv_imp.inl
src/acc/hip-row-wf/: spmv_hip_acc_imp.h  utils.h
src/acc/hip-sync-wf-row/: spmv_hip_acc_imp.cpp  spmv_hip_acc_imp.h
src/acc/hip-thread-row/: CMakeLists.txt  source_list.cmake  spmv_hip_acc_imp.cpp  spmv_hip_acc_imp.h  thread_row.cpp  thread_row.h  thread_row.inl  thread_row_block.hpp  thread_row_block_x_remap.hpp  thread_row_config.h  thread_row_x_remap.inl
src/acc/hip-vector-row/: opt_double_buffer.hpp  source_list.cmake  spmv_hip_acc_imp.cpp  spmv_hip_acc_imp.h  vector_config.h  vector_row.cpp  vector_row.h  vector_row.inl  vector_row_adaptive.hpp  vector_row_native.hpp
src/acc/hip-wf-row/: global_mem_ops.hpp  source_list.cmake  spmv_hip.cpp  spmv_hip.h  spmv_hip_acc_imp.cpp  spmv_hip_acc_imp.h  utils.h  wavefront_row_default.hpp  wavefront_row_lds.hpp  wavefront_row_reg.hpp
src/acc/hip-wf-row-reg/: source_list.cmake  spmv_hip_acc_imp.cpp
tools/: CMakeLists.txt  get_clipp.sh  global_data.h  main.cpp
tools/suitesparse-dl/: README.md  cli.go  go.mod  go.sum  html_parser.go  main.go  matrix.go  template.example.sh
tools/suitesparse-dl/batch-gen/: gen.go
tools/suitesparse-dl/conv/: conv.go  mm_parser.go
tools/suitesparse-dl/dl/: dl.go
tools/suitesparse-dl/fetch/: fetch.go
tools/suitesparse-dl/list/: list.go
tools/suitesparse-dl/mtx/: html_parser.go  matrix.go
